--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -24,6 +25,10 @@
         <activity
             android:name="com.pasali.kupli.SaveActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.pasali.kupli.ShowActivity"
+            android:label="@string/title_activity_show" >
         </activity>
     </application>
 
